update bearer auth to basic in swagger
